--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.novoda:bintray-release:0.9.1'
     }
+
 }
 
 allprojects {
